--- a/src/app/[locale]/blog/posts/en/the-rise-of-design-engineering.mdx
+++ b/src/app/[locale]/blog/posts/en/the-rise-of-design-engineering.mdx
@@ -1,8 +1,8 @@
 ---
-title: "The rise of design engineering"
-publishedAt: "2024-03-05"
+title: "From NPC to Chairman - My Journey at Himaja Unsri"
+publishedAt: "2024-11-12"
 summary: "In recent years, the role of design engineering has evolved from a specialized niche to a critical component in the development of innovative products and solutions."
-tag: "Technology"
+tag: "Organization"
 ---
 
 The Rise of Design Engineering
