--- a/src/app/[locale]/blog/posts/id/the-99-percent-that-remains-in-the-drawer.mdx
+++ b/src/app/[locale]/blog/posts/id/the-99-percent-that-remains-in-the-drawer.mdx
@@ -1,6 +1,6 @@
 ---
-title: "99% yang tersimpan di dalam laci"
-publishedAt: "2024-03-05"
+title: "GDGoC Unsri 2024"
+publishedAt: "2024-12-21"
 summary: "Sebagai insinyur desain, kita sering kali dikenal dari 1% karya kita yang berhasil masuk ke produk akhir."
 ---
 
