--- a/src/app/[locale]/blog/posts/id/the-rise-of-design-engineering.mdx
+++ b/src/app/[locale]/blog/posts/id/the-rise-of-design-engineering.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Kebangkitan teknik desain"
-publishedAt: "2024-03-05"
+title: "Dari seorang NPC hingga menjadi Ketua Umum - Perjalananku di Himaja Unsri"
+publishedAt: "2024-11-12"
 summary: "Dalam beberapa tahun terakhir, peran teknik desain telah berkembang dari ceruk khusus menjadi komponen penting dalam pengembangan produk dan solusi inovatif."
 ---
 
