--- a/src/app/[locale]/work/projects/en/pkkmb2024.mdx
+++ b/src/app/[locale]/work/projects/en/pkkmb2024.mdx
@@ -1,21 +1,12 @@
 ---
-title: "Building Once UI, a Customizable Design System"
-publishedAt: "2024-04-08"
+title: "PKKMB Universitas Sriwijaya: Bhawasena 2024"
+publishedAt: "2024-08-23"
 summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
 images:
   - "/images/projects/project-01/cover-01.jpg"
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/cover-03.jpg"
   - "/images/projects/project-01/cover-04.jpg"
-team:
-  - name: "Moh Rizky Sinaga"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.png"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
 ---
 
 ## Overview
