--- a/src/app/[locale]/work/projects/en/sb24.mdx
+++ b/src/app/[locale]/work/projects/en/sb24.mdx
@@ -1,15 +1,10 @@
 ---
-title: "Automating Design Handovers with a Figma to Code Pipeline"
-publishedAt: "2024-04-01"
+title: "Sriwijaya Besanjo 2024: Thalassa Agate"
+publishedAt: "2024-01-27"
 summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
 images:
   - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
-team:
-  - name: "John Doe"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+  - "/images/projects/project-01/cover-03.jpg"
 ---
 
 ## Overview
