--- a/src/app/[locale]/work/projects/id/pkkmb2024.mdx
+++ b/src/app/[locale]/work/projects/id/pkkmb2024.mdx
@@ -1,21 +1,12 @@
 ---
-title: "Membangun sistem desain adaptif untuk Archlight"
-publishedAt: "2024-04-08"
+title: "PKKMB Universitas Sriwijaya: Bhawasena 2024"
+publishedAt: "2024-08-23"
 summary: "Dalam proyek ini, saya mengembangkan sistem desain yang fleksibel dan skalabel menggunakan Next.js untuk pengembangan front-end dan Figma untuk kolaborasi desain."
 images:
   - "/images/projects/project-01/cover-01.jpg"
   - "/images/projects/project-01/cover-02.jpg"
   - "/images/projects/project-01/cover-03.jpg"
   - "/images/projects/project-01/cover-04.jpg"
-team:
-  - name: "Moh Rizky Sinaga"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.png"
-    linkedIn: "https://www.linkedin.com/in/janesmith"
 ---
 
 ## Ikhtisar
