--- a/src/app/[locale]/work/projects/id/sb24.mdx
+++ b/src/app/[locale]/work/projects/id/sb24.mdx
@@ -1,15 +1,10 @@
 ---
-title: "Mengotomatisasi Penyerahan Desain dengan Pipeline Figma ke Kode"
-publishedAt: "2024-04-01"
+title: "Sriwijaya Besanjo 2024: Thalassa Agate"
+publishedAt: "2024-01-27"
 summary: "Mengeksplorasi perdebatan abadi antara penggunaan spasi dan tab untuk indentasi kode, dan mengapa pilihan ini lebih penting dari yang Anda kira."
 images:
   - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/image-03.jpg"
-team:
-  - name: "John Doe"
-    role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
-    linkedIn: "https://www.linkedin.com/company/once-ui/"
+  - "/images/projects/project-01/cover-03.jpg"
 ---
 
 ## Ikhtisar
