--- a/src/app/[locale]/work/projects/en/pkkmb2024.mdx
+++ b/src/app/[locale]/work/projects/en/pkkmb2024.mdx
@@ -1,36 +1,45 @@
 ---
 title: "PKKMB Universitas Sriwijaya: Bhawasena 2024"
 publishedAt: "2024-08-23"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
+summary: "Bhawasena 2024 is the official PKKMB event of Sriwijaya University, serving as an introduction program for new students with activities focused on fostering creativity, leadership, and teamwork."
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/ev/bhawasena-1.jpg"
+  - "/images/projects/ev/bhawasena-2.jpg"
 ---
 
 ## Overview
 
-Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration.
+Bhawasena 2024 is a comprehensive orientation program for new students at Sriwijaya University. As part of the university’s PKKMB (Pengenalan Kehidupan Kampus bagi Mahasiswa Baru), Bhawasena aims to familiarize students with campus life, academic expectations, and values while fostering their sense of belonging and responsibility as members of the academic community.
 
 ## Key Features
+- Interactive Sessions:
+Workshops, group discussions, and motivational talks designed to inspire new students and boost their confidence.
 
-- **Component Library**: Built a set of modular, reusable UI components using React and styled-components in Next.js, focusing on accessibility and responsiveness.
-- **Theming and Customization**: Integrated a theming system that allows easy switching and customization of color palettes, typography, and layout styles using CSS variables and Figma tokens.
-- **Figma Integration**: Collaborated closely with designers by setting up a shared design library in Figma. This library was synchronized with the codebase, ensuring design handoffs were seamless and that design tokens remained consistent across both platforms.
-- **Documentation and Usage Guidelines**: Developed comprehensive documentation with Storybook to showcase components, usage patterns, and best practices, ensuring the design system is easy to adopt by other teams.
+- Campus Tour:
+Guided tours to familiarize students with key locations on campus, including faculties, libraries, and student activity centers.
 
-## Technologies Used
+- Cultural and Creative Events:
+Activities that promote cultural appreciation, teamwork, and creative expression through art, music, and performances.
 
-- **Next.js**: For fast, server-rendered React applications.
-- **Figma**: For creating and managing design assets and prototypes.
-- **Styled-Components**: For styling React components with a modular, themable approach.
-- **Storybook**: For building an interactive, documented component library.
+- Leadership Development:
+Team-building exercises and leadership games to help students discover their potential and foster collaboration.
+
 
 ## Challenges and Learnings
 
-One key challenge was balancing the need for flexibility with the desire to maintain design consistency. The solution involved creating well-defined design tokens and establishing clear guidelines for when and how components could be customized. Additionally, setting up effective collaboration workflows between designers and developers using Figma and Git was a learning experience that greatly improved the process.
+- Engaging a Large Audience:
+Coordinating activities for thousands of new students with diverse interests and backgrounds required detailed planning and adaptability.
+
+- Time Management:
+Ensuring all sessions ran smoothly within a packed schedule was challenging but achieved through efficient collaboration and proactive problem-solving.
+
+- Technical Constraints:
+Managing online platforms and hybrid systems during certain sessions posed technical hurdles, which were addressed by optimizing resources and support teams.
+
+- Cultural Sensitivity:
+Incorporating activities that respect and celebrate the cultural diversity of the student body while fostering inclusivity.
+
 
 ## Outcome
 
-The design system is now actively used across multiple projects, leading to faster development cycles, fewer design inconsistencies, and improved collaboration between design and development teams. It has become a foundation for scaling our products efficiently while ensuring a cohesive user experience.
+The program successfully welcomed thousands of students into Sriwijaya University with meaningful activities that nurtured their growth, introduced them to campus life, and created lasting connections among peers.
