--- a/src/app/[locale]/work/projects/id/pkkmb2024.mdx
+++ b/src/app/[locale]/work/projects/id/pkkmb2024.mdx
@@ -1,12 +1,10 @@
 ---
 title: "PKKMB Universitas Sriwijaya: Bhawasena 2024"
 publishedAt: "2024-08-23"
-summary: "Dalam proyek ini, saya mengembangkan sistem desain yang fleksibel dan skalabel menggunakan Next.js untuk pengembangan front-end dan Figma untuk kolaborasi desain."
+summary: "Bhawasena 2024 adalah acara resmi PKKMB Universitas Sriwijaya yang bertujuan memperkenalkan mahasiswa baru melalui berbagai kegiatan untuk mendorong kreativitas, kepemimpinan, dan kerja sama tim."
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/ev/bhawasena-1.jpg"
+  - "/images/projects/ev/bhawasena-2.jpg"
 ---
 
 ## Ikhtisar
@@ -14,23 +12,29 @@ images:
 Dalam proyek ini, saya mengembangkan sistem desain yang fleksibel dan skalabel menggunakan Next.js untuk pengembangan front-end dan Figma untuk kolaborasi desain. Tujuannya adalah untuk membuat perpustakaan komponen yang dapat digunakan kembali yang tidak hanya mematuhi prinsip desain yang konsisten tetapi juga mudah diperluas untuk kebutuhan di masa depan. Sistem desain ini bertujuan untuk meningkatkan pengalaman pengembang secara keseluruhan sambil menjaga konsistensi visual di berbagai proyek.
 
 ## Fitur Utama
-
-- **Perpustakaan Komponen**: Membangun serangkaian komponen UI modular dan dapat digunakan kembali menggunakan React dan styled-components di Next.js, dengan fokus pada aksesibilitas dan responsivitas.
-- **Pengaturan Tema dan Kustomisasi**: Mengintegrasikan sistem pengaturan tema yang memungkinkan pergantian dan kustomisasi palet warna, tipografi, dan gaya tata letak dengan mudah menggunakan variabel CSS dan token Figma.
-- **Integrasi Figma**: Bekerja sama dengan desainer dengan menyiapkan perpustakaan desain bersama di Figma. Perpustakaan ini disinkronkan dengan kode, memastikan proses penyerahan desain berjalan mulus dan token desain tetap konsisten di kedua platform.
-- **Dokumentasi dan Panduan Penggunaan**: Mengembangkan dokumentasi lengkap dengan Storybook untuk menampilkan komponen, pola penggunaan, dan praktik terbaik, memastikan sistem desain mudah diadopsi oleh tim lain.
-
-## Teknologi yang Digunakan
-
-- **Next.js**: Untuk aplikasi React yang cepat dan dirender di server.
-- **Figma**: Untuk membuat dan mengelola aset desain dan prototipe.
-- **Styled-Components**: Untuk menata komponen React dengan pendekatan modular dan tematis.
-- **Storybook**: Untuk membangun perpustakaan komponen interaktif dan terdokumentasi.
+- Sesi Interaktif:
+Lokakarya, diskusi kelompok, dan ceramah motivasi yang dirancang untuk menginspirasi mahasiswa baru dan meningkatkan rasa percaya diri mereka.
+- Tur Kampus:
+Panduan keliling kampus untuk mengenalkan lokasi penting seperti fakultas, perpustakaan, dan pusat kegiatan mahasiswa.
+- Acara Budaya dan Kreativitas:
+Kegiatan yang mempromosikan penghargaan budaya, kerja sama tim, serta ekspresi kreativitas melalui seni, musik, dan pertunjukan.
+- Pengembangan Kepemimpinan:
+Latihan membangun tim dan permainan kepemimpinan untuk membantu mahasiswa menemukan potensi mereka dan mendorong kolaborasi.
 
 ## Tantangan dan Pembelajaran
 
-Salah satu tantangan utama adalah menyeimbangkan kebutuhan akan fleksibilitas dengan keinginan untuk menjaga konsistensi desain. Solusinya melibatkan pembuatan token desain yang terdefinisi dengan baik dan menetapkan pedoman yang jelas untuk kapan dan bagaimana komponen dapat disesuaikan. Selain itu, menyiapkan alur kerja kolaborasi yang efektif antara desainer dan pengembang menggunakan Figma dan Git adalah pengalaman belajar yang sangat meningkatkan prosesnya.
+- Melibatkan Audiens yang Besar:
+Mengoordinasikan kegiatan untuk ribuan mahasiswa baru dengan minat dan latar belakang yang beragam membutuhkan perencanaan yang detail dan kemampuan beradaptasi.
+
+- Manajemen Waktu:
+Memastikan semua sesi berjalan lancar dalam jadwal yang padat menjadi tantangan, namun dapat diatasi melalui kolaborasi yang efisien dan penyelesaian masalah secara proaktif.
+
+- Keterbatasan Teknis:
+Mengelola platform online dan sistem hybrid pada beberapa sesi menghadirkan kendala teknis, yang diatasi dengan mengoptimalkan sumber daya dan tim pendukung.
+
+- Sensitivitas Budaya:
+Memasukkan kegiatan yang menghormati dan merayakan keragaman budaya mahasiswa baru sekaligus mendorong inklusivitas.
 
 ## Hasil
 
-Sistem desain ini sekarang aktif digunakan di berbagai proyek, yang mengarah pada siklus pengembangan yang lebih cepat, lebih sedikit inkonsistensi desain, dan peningkatan kolaborasi antara tim desain dan pengembangan. Sistem ini telah menjadi fondasi untuk mengembangkan produk kami secara efisien sambil memastikan pengalaman pengguna yang kohesif.
+Program ini sukses menyambut ribuan mahasiswa baru Universitas Sriwijaya melalui kegiatan bermakna yang mendukung pertumbuhan pribadi, memperkenalkan kehidupan kampus, dan menciptakan koneksi yang erat di antara sesama mahasiswa.
