--- a/src/app/[locale]/work/projects/id/sb24.mdx
+++ b/src/app/[locale]/work/projects/id/sb24.mdx
@@ -9,30 +9,30 @@ images:
 
 ## Ikhtisar
 
-Dalam proyek ini, saya berfokus pada otomatisasi proses penyerahan desain yang sering memakan waktu. Tujuannya adalah untuk membuat pipeline yang mengubah desain Figma langsung menjadi kode yang bersih dan siap produksi. Dengan mengintegrasikan token desain, perpustakaan komponen, dan alur kerja otomatis, solusi ini secara signifikan mengurangi waktu yang dihabiskan untuk menerjemahkan aset desain menjadi kode, sambil menjaga konsistensi desain di seluruh produk.
+Thalassa Agate melambangkan ketahanan lautan (Thalassa) dan keindahan abadi batu akik (Agate). Acara ini, sebagai bagian dari tradisi Universitas Sriwijaya, mengenalkan mahasiswa baru pada kehidupan kampus sambil menekankan nilai ketangguhan, persatuan, dan kreativitas. Program ini memadukan penghargaan budaya dengan pengembangan kepemimpinan untuk membangun rasa kebersamaan dan tujuan di antara peserta.
 
 ## Fitur Utama
 
-- **Integrasi Plugin Figma**: Mengembangkan plugin Figma khusus yang mengekstrak token desain seperti warna, tipografi, dan nilai jarak, lalu mengekspornya dalam format yang kompatibel dengan basis kode kami.
-- **Pembuatan Kode**: Mengintegrasikan proses otomatis yang menerjemahkan komponen Figma menjadi kode React menggunakan kombinasi token desain dan template komponen yang sudah dibangun. Ini memungkinkan pengembang untuk lebih fokus pada logika dan mengurangi pengkodean UI yang repetitif.
-- **Sinkronisasi Berkelanjutan**: Membuat pipeline CI/CD yang terus menerus menyinkronkan perubahan desain dari Figma ke basis kode, memastikan pembaruan desain tercermin secara instan tanpa intervensi manual.
-- **Sistem Desain yang Skalabel**: Memanfaatkan sistem desain yang tetap menjadi sumber kebenaran tunggal bagi desainer dan pengembang, memudahkan dalam menjaga konsistensi meskipun produk terus berkembang.
-
-## Teknologi yang Digunakan
-
-- **Figma API**: Untuk mengekstrak token desain dan data komponen langsung dari desain Figma.
-- **React dan Next.js**: Untuk membangun basis kode front-end dengan komponen yang bersih dan dapat digunakan kembali.
-- **Styled-Components**: Untuk mengelola gaya secara dinamis menggunakan token desain.
-- **GitHub Actions**: Untuk mengotomatisasi pipeline dan menyinkronkan perubahan desain ke repositori.
+- Pameran Budaya:
+Pertunjukan dan pameran yang merayakan kekayaan warisan budaya Indonesia, menekankan persatuan dalam keberagaman.
+- Lokakarya Kepemimpinan:
+Sesi interaktif dan kegiatan yang dirancang untuk membangun ketahanan, kerja sama tim, dan kemampuan pemecahan masalah.
+- Kompetisi Kreatif:
+Kesempatan bagi mahasiswa untuk menampilkan bakat mereka dalam seni, musik, dan bercerita, sekaligus mendorong kreativitas dan kolaborasi.
+- Kegiatan Pembentukan Komunitas:
+Tantangan tim dan latihan kebersamaan untuk membantu mahasiswa membangun hubungan erat dengan teman dan mentor.
 
 ## Tantangan dan Pembelajaran
 
-Salah satu tantangan terbesar adalah memastikan bahwa kode yang dihasilkan bersih dan mudah dikelola. Ini melibatkan pengaturan pemetaan cerdas antara komponen Figma dan struktur kode React, serta menangani kasus-kasus tepi seperti desain responsif dan rendering bersyarat. Selain itu, sinkronisasi berkelanjutan memerlukan sistem penanganan kesalahan yang kuat untuk mencegah konflik selama pengembangan.
+- Mendorong Inklusivitas:
+Memastikan semua mahasiswa, tanpa memandang latar belakang, merasa dihargai dan terlibat.
+- Menyeimbangkan Tradisi dan Inovasi:
+Memadukan elemen modern dengan tetap menjaga nilai-nilai tradisional menjadi tantangan unik.
+- Manajemen Acara:
+Mengoordinasikan logistik untuk pertunjukan dan lokakarya berskala besar membutuhkan perencanaan yang matang dan kemampuan beradaptasi.
+- Keberlanjutan:
+Menekankan praktik ramah lingkungan dalam pelaksanaan acara besar ini.
 
 ## Hasil
 
-Pipeline otomatis Figma ke kode telah merampingkan proses penyerahan, mengurangi waktu desain-ke-pengembangan sebesar 40%. Desainer kini lebih percaya diri bahwa desain mereka akan diterjemahkan dengan akurat ke dalam kode, dan pengembang dapat fokus pada logika yang lebih kompleks serta pengembangan fitur. Proyek ini telah membuktikan nilai otomasi dalam menjembatani kesenjangan antara desain dan pengembangan.
-
----
-
-Proyek ini menunjukkan kemampuan Anda dalam memanfaatkan otomasi dan merampingkan alur kerja, yang sangat relevan untuk portofolio teknik desain yang berfokus pada efisiensi dan inovasi.
+Sriwijaya Besanjo 2024: Thalassa Agate sukses menyatukan mahasiswa baru dalam perayaan bermakna tentang budaya, ketahanan, dan kepemimpinan, memberikan kesan mendalam pada perjalanan mereka di universitas.
