--- a/src/app/[locale]/work/projects/en/sb24.mdx
+++ b/src/app/[locale]/work/projects/en/sb24.mdx
@@ -1,38 +1,38 @@
 ---
 title: "Sriwijaya Besanjo 2024: Thalassa Agate"
 publishedAt: "2024-01-27"
-summary: "Explore the enduring debate between using spaces and tabs for code indentation, and why this choice matters more than you might think."
+summary: "Sriwijaya Besanjo 2024: Thalassa Agate is a cultural and leadership-themed event designed to immerse new students in the values of unity, resilience, and creativity through a series of inspiring and interactive activities."
 images:
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
+  - "/images/projects/ev/sb24.jpg"
+  - "/images/projects/ev/sb24.jpg"
 ---
 
 ## Overview
 
-In this project, I focused on automating the often tedious design handover process. The goal was to create a pipeline that converts Figma designs directly into clean, production-ready code. By integrating design tokens, component libraries, and automated workflows, this solution significantly reduced the time spent on translating design assets into code, while maintaining design consistency across the product.
+Thalassa Agate represents the resilience of the ocean (Thalassa) and the enduring beauty of gemstones (Agate). This event, part of Sriwijaya University's traditions, introduces new students to campus life while emphasizing the values of perseverance, unity, and creativity. The program blends cultural appreciation with leadership development, fostering a sense of belonging and purpose among participants.
 
 ## Key Features
 
-- **Figma Plugin Integration**: Developed a custom Figma plugin that extracts design tokens such as colors, typography, and spacing values, and exports them in a format compatible with our codebase.
-- **Code Generation**: Integrated an automated process that translates Figma components into React code using a combination of design tokens and pre-built component templates. This allowed developers to focus more on logic and less on repetitive UI coding.
-- **Continuous Sync**: Established a CI/CD pipeline that continuously synchronizes design changes from Figma to the codebase, ensuring design updates are reflected instantly without manual intervention.
-- **Scalable Design System**: Leveraged a design system that remains the single source of truth for both designers and developers, making it easy to maintain consistency even as the product evolves.
-
-## Technologies Used
-
-- **Figma API**: For extracting design tokens and component data directly from the Figma designs.
-- **React and Next.js**: For building the front-end codebase with clean, reusable components.
-- **Styled-Components**: For managing styles dynamically using design tokens.
-- **GitHub Actions**: For automating the pipeline and syncing design changes to the repository.
+- Cultural Showcases:
+Performances and exhibitions celebrating the diverse heritage of Indonesia, emphasizing the unity in cultural diversity.
+- Leadership Workshops:
+Interactive sessions and activities designed to build resilience, teamwork, and problem-solving skills.
+- Creative Competitions:
+Opportunities for students to showcase their talents in art, music, and storytelling, fostering creativity and collaboration.
+- Community Building Activities:
+Team challenges and bonding exercises to help students form strong connections with peers and mentors.
 
 ## Challenges and Learnings
 
-One of the biggest challenges was ensuring that the generated code was clean and maintainable. This involved setting up intelligent mapping between Figma components and React code structures, as well as managing edge cases like responsive design and conditional rendering. Additionally, the continuous synchronization required a robust error-handling system to prevent conflicts during development.
+- Fostering Inclusivity:
+Ensuring all students, regardless of background, felt valued and engaged.
+- Balancing Tradition and Innovation:
+Incorporating modern elements while preserving traditional values posed a unique challenge.
+- Event Management:
+Coordinating logistics for large-scale performances and workshops required careful planning and adaptability.
+- Sustainability:
+Emphasizing environmentally friendly practices while hosting a significant event.
 
 ## Outcome
 
-The automated Figma to code pipeline has streamlined the handoff process, cutting down design-to-development time by 40%. Designers now have more confidence that their designs will be accurately translated into code, and developers can focus on more complex logic and feature development. This project has proven the value of automation in bridging the gap between design and development.
-
----
-
-This project demonstrates your ability to leverage automation and streamline workflows, which is highly relevant for design engineering portfolios focused on efficiency and innovation.
+Sriwijaya Besanjo 2024: Thalassa Agate successfully brought together new students in a meaningful celebration of culture, resilience, and leadership, leaving a lasting impact on their university journey.
