--- a/src/app/[locale]/work/projects/en/pkkmb2024.mdx
+++ b/src/app/[locale]/work/projects/en/pkkmb2024.mdx
@@ -3,8 +3,11 @@ title: "PKKMB Universitas Sriwijaya: Bhawasena 2024"
 publishedAt: "2024-08-23"
 summary: "Bhawasena 2024 is the official PKKMB event of Sriwijaya University, serving as an introduction program for new students with activities focused on fostering creativity, leadership, and teamwork."
 images:
+  - "/images/projects/ev/bhawasena-5.jpg"
   - "/images/projects/ev/bhawasena-1.jpg"
   - "/images/projects/ev/bhawasena-2.jpg"
+  - "/images/projects/ev/bhawasena-4.jpg"
+  - "/images/projects/ev/bhawasena-3.png"
 ---
 
 ## Overview
