--- a/src/app/[locale]/work/projects/id/sb24.mdx
+++ b/src/app/[locale]/work/projects/id/sb24.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Sriwijaya Besanjo 2024: Thalassa Agate"
 publishedAt: "2024-01-27"
-summary: "Mengeksplorasi perdebatan abadi antara penggunaan spasi dan tab untuk indentasi kode, dan mengapa pilihan ini lebih penting dari yang Anda kira."
+summary: "Sriwijaya Besanjo 2024: Thalassa Agate adalah sebuah acara bertema budaya dan kepemimpinan yang dirancang untuk memperkenalkan mahasiswa baru pada nilai-nilai kebersamaan, ketangguhan, dan kreativitas melalui serangkaian kegiatan yang inspiratif dan interaktif."
 images:
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
+  - "/images/projects/ev/sb24-2.jpg"
+  - "/images/projects/ev/sb24.jpg"
 ---
 
 ## Ikhtisar
